--- a/portfolio/css/freelancer.css
+++ b/portfolio/css/freelancer.css
@@ -456,4 +456,179 @@ footer .footer-below {
 .portfolio-modal .modal-backdrop {
     display: none;
     opacity: 0;
+}  
+    /* jssor slider arrow navigator skin 06 css */
+            /*
+            .jssora06l                  (normal)
+            .jssora06r                  (normal)
+            .jssora06l:hover            (normal mouseover)
+            .jssora06r:hover            (normal mouseover)
+            .jssora06l.jssora06ldn      (mousedown)
+            .jssora06r.jssora06rdn      (mousedown)
+            */
+            .jssora06l, .jssora06r {
+                display: block;
+                position: absolute;
+                /* size of arrow element */
+                width: 45px;
+                height: 45px;
+                cursor: pointer;
+                background: url(img/a06.png) no-repeat;
+                overflow: hidden;
+            }
+            .jssora06l { background-position: -8px -38px; }
+            .jssora06r { background-position: -68px -38px; }
+            .jssora06l:hover { background-position: -128px -38px; }
+            .jssora06r:hover { background-position: -188px -38px; }
+/*---------------------------------------------------------------------*/
+/*  6.5. SECTION - RESUME
+/*---------------------------------------------------------------------*/
+
+#resume h3 {
+  text-align: center;
+}
+@media (min-width: 768px) {
+  #resume h3 {
+    text-align: left;
+  }
+}
+#resume .education {
+  margin-top: 30px;
+}
+#resume .work-experience {
+  margin-top: 50px;
+}
+.panel-group.resume {
+  position: relative;
+  margin-top: 30px;
+}
+.panel-group.resume .resume-item {
+  position: relative;
+  margin-bottom: 40px;
+}
+@media (min-width: 568px) {
+  .panel-group.resume .resume-item {
+    margin-bottom: 20px;
+  }
+}
+@media (min-width: 768px) {
+  .panel-group.resume .resume-item:before {
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: calc(100% + 20px);
+    top: 0;
+    left: 170px;
+    border-left: 1px dashed #484848;
+  }
+}
+.panel-group.resume .resume-item:last-child {
+  margin-bottom: 0px;
+}
+.panel-group.resume .resume-item:last-child:before {
+  display: none;
+}
+.panel-group.resume .resume-item .resume-year {
+  display: block;
+  position: relative;
+  width: 120px;
+  height: 40px;
+  margin-bottom: -20px;
+  margin-right: auto;
+  margin-left: auto;
+  line-height: 40px;
+  background-color: #128F76;
+  text-align: center;
+  font-weight: 700;
+  text-transform: uppercase;
+  border-radius: 4px;
+  border-color: white;
+  color:#1A242F;
+}
+@media (min-width: 568px) {
+  .panel-group.resume .resume-item .resume-year {
+    position: absolute;
+    top: 0;
+    left: 0;
+    margin: 0;
+  }
+}
+.panel-group.resume .resume-item .resume-btn {
+  position: absolute;
+  z-index: 5;
+  top: 0;
+  left: 150px;
+  width: 40px;
+  height: 40px;
+  background-color: #2C3E50;
+  border-radius: 4px;
+}
+@media (max-width: 767px) {
+  .panel-group.resume .resume-item .resume-btn {
+    display: none;
+  }
+}
+.panel-group.resume .resume-item .resume-btn > a {
+  display: block;
+  position: absolute;
+  z-index: 10;
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+}
+.panel-group.resume .resume-item .resume-btn > a:before {
+  display: block;
+  position: absolute;
+  z-index: 15;
+  content: '-';
+  top: 0;
+  left: 0;
+  width: 40px;
+  height: 40px;
+  line-height: 38px;
+  color: #ffffff;
+  font-size: 30px;
+  font-weight: 700;
+  text-align: center;
+}
+.panel-group.resume .resume-item .resume-btn > a.collapsed:before {
+  content: '+';
+}
+.panel-group.resume .resume-item .panel {
+  padding: 10px;
+  width: 100%;
+  background: transparent;
+  border: 1px solid #6e6e6e;
+  border-radius: 0px;
+}
+@media (min-width: 568px) {
+  .panel-group.resume .resume-item .panel {
+    width: calc(100% - 140px);
+    margin-left: 140px;
+  }
+}
+@media (min-width: 768px) {
+  .panel-group.resume .resume-item .panel {
+    width: calc(100% - 210px);
+    margin-left: 210px;
+  }
+}
+.panel-group.resume .resume-item .panel .panel-heading {
+  position: relative;
+}
+.panel-group.resume .resume-item .panel .panel-heading .panel-title {
+  text-transform: uppercase;
+}
+@media (max-width: 567px) {
+  .panel-group.resume .resume-item .panel .panel-heading .panel-title {
+    padding-top: 20px;
+  }
+}
+.panel-group.resume .resume-item .panel .panel-collapse .panel-body {
+  padding-top: 5px;
+  border-top: none;
+}
+.panel-group.resume .resume-item .panel .panel-collapse .panel-body p {
+  margin-bottom: 0px;
 }
