--- a/startbootstrap-freelancer-1.0.3/css/style.css
+++ b/startbootstrap-freelancer-1.0.3/css/style.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
- * Code licensed under the Apache License v2.0.
- * For details, see http://www.apache.org/licenses/LICENSE-2.0.
- */
-
 body {
     overflow-x: hidden;
 }
@@ -21,8 +15,8 @@ a:hover,
 a:focus,
 a:active,
 a.active {
-    outline: 0;
-    color: #18bc9c;
+    color: #7D1935;
+    outline: none;
 }
 
 h1,
@@ -31,48 +25,48 @@ h3,
 h4,
 h5,
 h6 {
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
 
 hr.star-light,
 hr.star-primary {
-    margin: 25px auto 30px;
     padding: 0;
-    max-width: 250px;
-    border: 0;
+    border: none;
     border-top: solid 5px;
     text-align: center;
+    max-width: 250px;
+    margin: 25px auto 30px;
 }
 
 hr.star-light:after,
 hr.star-primary:after {
     content: "\f005";
+    font-family: FontAwesome;
     display: inline-block;
     position: relative;
-    top: -.8em;
-    padding: 0 .25em;
-    font-family: FontAwesome;
+    top: -0.8em;
     font-size: 2em;
+    padding: 0 0.25em;
 }
 
 hr.star-light {
-    border-color: #fff;
+    border-color: white;
 }
 
 hr.star-light:after {
-    color: #fff;
-    background-color: #18bc9c;
+    background-color: #7D1935;
+    color: white;
 }
 
 hr.star-primary {
-    border-color: #2c3e50;
+    border-color: #7D1935;
 }
 
 hr.star-primary:after {
-    color: #2c3e50;
-    background-color: #fff;
+    background-color: white;
+    color: #7D1935;
 }
 
 .img-centered {
@@ -81,8 +75,8 @@ hr.star-primary:after {
 
 header {
     text-align: center;
-    color: #fff;
-    background: #18bc9c;
+    background: #7D1935;
+    color: white;
 }
 
 header .container {
@@ -97,10 +91,10 @@ header img {
 
 header .intro-text .name {
     display: block;
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 2em;
     font-weight: 700;
+    font-size: 2em;
 }
 
 header .intro-text .skills {
@@ -108,7 +102,7 @@ header .intro-text .skills {
     font-weight: 300;
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     header .container {
         padding-top: 200px;
         padding-bottom: 100px;
@@ -123,19 +117,19 @@ header .intro-text .skills {
     }
 }
 
-@media(min-width:768px) {
+@media (min-width: 768px) {
     .navbar-fixed-top {
         padding: 25px 0;
-        -webkit-transition: padding .3s;
-        -moz-transition: padding .3s;
-        transition: padding .3s;
+        -webkit-transition: padding 0.3s;
+        -moz-transition: padding 0.3s;
+        transition: padding 0.3s;
     }
 
     .navbar-fixed-top .navbar-brand {
         font-size: 2em;
-        -webkit-transition: all .3s;
-        -moz-transition: all .3s;
-        transition: all .3s;
+        -webkit-transition: all 0.3s;
+        -moz-transition: all 0.3s;
+        transition: all 0.3s;
     }
 
     .navbar-fixed-top.navbar-shrink {
@@ -148,13 +142,13 @@ header .intro-text .skills {
 }
 
 .navbar {
+    font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     font-weight: 700;
 }
 
 .navbar a:focus {
-    outline: 0;
+    outline: none;
 }
 
 .navbar .navbar-nav {
@@ -162,12 +156,12 @@ header .intro-text .skills {
 }
 
 .navbar .navbar-nav li a:focus {
-    outline: 0;
+    outline: none;
 }
 
 .navbar-default,
 .navbar-inverse {
-    border: 0;
+    border: none;
 }
 
 section {
@@ -180,20 +174,20 @@ section h2 {
 }
 
 section.success {
-    color: #fff;
-    background: #18bc9c;
+    background: #7D1935;
+    color: white;
 }
 
 section.success a,
-section.success a:hover,
-section.success a:focus,
-section.success a:active,
-section.success a.active {
-    outline: 0;
-    color: #2c3e50;
+  section.success a:hover,
+  section.success a:focus,
+  section.success a:active,
+  section.success a.active {
+    color: #7D1935;
+    outline: none;
 }
 
-@media(max-width:767px) {
+@media (max-width: 767px) {
     section {
         padding: 75px 0;
     }
@@ -204,26 +198,26 @@ section.success a.active {
 }
 
 #portfolio .portfolio-item {
-    right: 0;
     margin: 0 0 15px;
+    right: 0;
 }
 
 #portfolio .portfolio-item .portfolio-link {
     display: block;
     position: relative;
-    margin: 0 auto;
     max-width: 400px;
+    margin: 0 auto;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption {
+    background: fade(#7D1935, 90%);
     position: absolute;
     width: 100%;
     height: 100%;
     opacity: 0;
-    background: rgba(24,188,156,.9);
-    -webkit-transition: all ease .5s;
-    -moz-transition: all ease .5s;
-    transition: all ease .5s;
+    transition: all ease 0.5s;
+    -webkit-transition: all ease 0.5s;
+    -moz-transition: all ease 0.5s;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption:hover {
@@ -232,13 +226,13 @@ section.success a.active {
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content {
     position: absolute;
-    top: 50%;
     width: 100%;
-    height: 20px;
-    margin-top: -12px;
-    text-align: center;
+    height: 70px;
     font-size: 20px;
-    color: #fff;
+    text-align: center;
+    top: 50%;
+    margin-top: -12px;
+    color: white;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
@@ -246,56 +240,73 @@ section.success a.active {
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
-#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
-    margin: 0;
+        #portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
+    margin: 0 0 10px 0;
 }
 
 #portfolio * {
     z-index: 2;
 }
 
-@media(min-width:767px) {
+@media (min-width: 767px) {
     #portfolio .portfolio-item {
         margin: 0 0 30px;
     }
 }
 
 .btn-outline {
-    margin-top: 15px;
-    border: solid 2px #fff;
+    color: white !important;
     font-size: 20px;
-    color: #fff;
-    background: 0 0;
-    transition: all .3s ease-in-out;
+    border: solid 2px white;
+    background: transparent;
+    transition: all 0.3s ease-in-out;
+    margin-top: 15px;
 }
 
-.btn-outline:hover,
-.btn-outline:focus,
-.btn-outline:active,
-.btn-outline.active {
-    border: solid 2px #fff;
-    color: #18bc9c;
-    background: #fff;
+.btn-outline:hover, .btn-outline:focus, .btn-outline:active, .btn-outline.active {
+    color: #7D1935 !important;
+    background: white;
+    border: solid 2px white;
+}
+
+.btn-success {
+    color: #ffffff;
+    background-color: #7D1935;
+    border-color: #7D1935;
+}
+
+.btn-success:hover, .btn-success:focus, .btn-success:active, .btn-success.active {
+    color: #7D1935;
+    background-color: white;
+    border-color: #7D1935;
+}
+
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
+    color: #7D1935;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
+    color: #7D1935;
 }
 
 .floating-label-form-group {
     position: relative;
     margin-bottom: 0;
-    padding-bottom: .5em;
-    border-bottom: 1px solid #eee;
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid #eeeeee;
 }
 
 .floating-label-form-group input,
-.floating-label-form-group textarea {
+  .floating-label-form-group textarea {
     z-index: 1;
     position: relative;
     padding-right: 0;
     padding-left: 0;
-    border: 0;
+    border: none;
     border-radius: 0;
     font-size: 1.5em;
-    background: 0 0;
-    box-shadow: none!important;
+    background: none;
+    box-shadow: none !important;
     resize: none;
 }
 
@@ -305,20 +316,20 @@ section.success a.active {
     position: relative;
     top: 2em;
     margin: 0;
-    font-size: .85em;
+    font-size: 0.85em;
     line-height: 1.764705882em;
     vertical-align: middle;
     vertical-align: baseline;
     opacity: 0;
-    -webkit-transition: top .3s ease,opacity .3s ease;
-    -moz-transition: top .3s ease,opacity .3s ease;
-    -ms-transition: top .3s ease,opacity .3s ease;
-    transition: top .3s ease,opacity .3s ease;
+    -webkit-transition: top 0.3s ease, opacity 0.3s ease;
+    -moz-transition: top 0.3s ease, opacity 0.3s ease;
+    -ms-transition: top 0.3s ease, opacity 0.3s ease;
+    transition: top 0.3s ease, opacity 0.3s ease;
 }
 
 .floating-label-form-group::not(:first-child) {
     padding-left: 14px;
-    border-left: 1px solid #eee;
+    border-left: 1px solid #eeeeee;
 }
 
 .floating-label-form-group-with-value label {
@@ -327,15 +338,15 @@ section.success a.active {
 }
 
 .floating-label-form-group-with-focus label {
-    color: #18bc9c;
+    color: #7D1935;
 }
 
 form .row:first-child .floating-label-form-group {
-    border-top: 1px solid #eee;
+    border-top: 1px solid #eeeeee;
 }
 
 footer {
-    color: #fff;
+    color: white;
 }
 
 footer h3 {
@@ -344,7 +355,7 @@ footer h3 {
 
 footer .footer-above {
     padding-top: 50px;
-    background-color: #2c3e50;
+    background-color: #7D1935;
 }
 
 footer .footer-col {
@@ -353,14 +364,14 @@ footer .footer-col {
 
 footer .footer-below {
     padding: 25px 0;
-    background-color: #233140;
+    background-color: #68152c;
 }
 
 .btn-social {
     display: inline-block;
-    width: 50px;
     height: 50px;
-    border: 2px solid #fff;
+    width: 50px;
+    border: 2px solid white;
     border-radius: 100%;
     text-align: center;
     font-size: 20px;
@@ -370,39 +381,39 @@ footer .footer-below {
 .btn:focus,
 .btn:active,
 .btn.active {
-    outline: 0;
+    outline: none;
 }
 
 .scroll-top {
-    z-index: 1049;
     position: fixed;
     right: 2%;
     bottom: 2%;
     width: 50px;
     height: 50px;
+    z-index: 1049;
 }
 
 .scroll-top .btn {
+    font-size: 20px;
     width: 50px;
     height: 50px;
     border-radius: 100%;
-    font-size: 20px;
     line-height: 28px;
 }
 
 .scroll-top .btn:focus {
-    outline: 0;
+    outline: none;
 }
 
 .portfolio-modal .modal-content {
-    padding: 100px 0;
-    min-height: 100%;
-    border: 0;
     border-radius: 0;
-    text-align: center;
     background-clip: border-box;
     -webkit-box-shadow: none;
     box-shadow: none;
+    border: none;
+    min-height: 100%;
+    padding: 100px 0;
+    text-align: center;
 }
 
 .portfolio-modal .modal-content h2 {
@@ -420,43 +431,48 @@ footer .footer-below {
 
 .portfolio-modal .close-modal {
     position: absolute;
-    top: 25px;
-    right: 25px;
     width: 75px;
     height: 75px;
     background-color: transparent;
+    top: 25px;
+    right: 25px;
     cursor: pointer;
 }
 
 .portfolio-modal .close-modal:hover {
-    opacity: .3;
+    opacity: 0.3;
 }
 
 .portfolio-modal .close-modal .lr {
-    z-index: 1051;
-    width: 1px;
     height: 75px;
+    width: 1px;
     margin-left: 35px;
-    background-color: #2c3e50;
-    -webkit-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);
+    background-color: #7D1935;
     transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    /* IE 9 */
+    -webkit-transform: rotate(45deg);
+    /* Safari and Chrome */
+    z-index: 1051;
 }
 
 .portfolio-modal .close-modal .lr .rl {
-    z-index: 1052;
-    width: 1px;
     height: 75px;
-    background-color: #2c3e50;
-    -webkit-transform: rotate(90deg);
-    -ms-transform: rotate(90deg);
+    width: 1px;
+    background-color: #7D1935;
     transform: rotate(90deg);
+    -ms-transform: rotate(90deg);
+      /* IE 9 */
+    -webkit-transform: rotate(90deg);
+      /* Safari and Chrome */
+    z-index: 1052;
 }
 
 .portfolio-modal .modal-backdrop {
-    display: none;
     opacity: 0;
-}  
+    display: none;
+}
+
 /* jssor slider arrow navigator skin 06 css */
 /*
 .jssora06l                  (normal)
@@ -466,51 +482,71 @@ footer .footer-below {
 .jssora06l.jssora06ldn      (mousedown)
 .jssora06r.jssora06rdn      (mousedown)
 */
-.jssora06l, .jssora06r {
+.jssora06l,
+.jssora06r {
     display: block;
     position: absolute;
-    /* size of arrow element */
+  /* size of arrow element */
     width: 45px;
     height: 45px;
     cursor: pointer;
     background: url(../img/a06.png) no-repeat;
     overflow: hidden;
 }
-.jssora06l { background-position: -8px -38px; }
-.jssora06r { background-position: -68px -38px; }
-.jssora06l:hover { background-position: -128px -38px; }
-.jssora06r:hover { background-position: -188px -38px; }
+
+.jssora06l {
+    background-position: -8px -38px;
+}
+
+.jssora06r {
+    background-position: -68px -38px;
+}
+
+.jssora06l:hover {
+    background-position: -128px -38px;
+}
+
+.jssora06r:hover {
+    background-position: -188px -38px;
+}
+
 /*---------------------------------------------------------------------*/
 /*  6.5. SECTION - RESUME
 /*---------------------------------------------------------------------*/
-
 #resume h3 {
     text-align: center;
 }
+
 @media (min-width: 768px) {
     #resume h3 {
         text-align: left;
     }
 }
+
 #resume .education {
     margin-top: 30px;
 }
+
 #resume .work-experience {
     margin-top: 50px;
 }
+
 .panel-group.resume {
     position: relative;
     margin-top: 30px;
 }
+
 .panel-group.resume .resume-item {
     position: relative;
     margin-bottom: 40px;
 }
+
 @media (min-width: 568px) {
     .panel-group.resume .resume-item {
         margin-bottom: 20px;
     }
 }
+
 @media (min-width: 768px) {
     .panel-group.resume .resume-item:before {
         position: absolute;
@@ -522,12 +558,15 @@ footer .footer-below {
         border-left: 1px dashed #484848;
     }
 }
+
 .panel-group.resume .resume-item:last-child {
     margin-bottom: 0px;
 }
+
 .panel-group.resume .resume-item:last-child:before {
     display: none;
 }
+
 .panel-group.resume .resume-item .resume-year {
     display: block;
     position: relative;
@@ -537,14 +576,15 @@ footer .footer-below {
     margin-right: auto;
     margin-left: auto;
     line-height: 40px;
-    background-color: #128F76;
+    background-color: #5b1227;
     text-align: center;
     font-weight: 700;
     text-transform: uppercase;
     border-radius: 4px;
     border-color: white;
-    color:#1A242F;
+    color: white;
 }
+
 @media (min-width: 568px) {
     .panel-group.resume .resume-item .resume-year {
         position: absolute;
@@ -553,6 +593,7 @@ footer .footer-below {
         margin: 0;
     }
 }
+
 .panel-group.resume .resume-item .resume-btn {
     position: absolute;
     z-index: 5;
@@ -560,14 +601,16 @@ footer .footer-below {
     left: 150px;
     width: 40px;
     height: 40px;
-    background-color: #2C3E50;
+    background-color: #7D1935;
     border-radius: 4px;
 }
+
 @media (max-width: 767px) {
     .panel-group.resume .resume-item .resume-btn {
         display: none;
     }
 }
+
 .panel-group.resume .resume-item .resume-btn > a {
     display: block;
     position: absolute;
@@ -577,6 +620,7 @@ footer .footer-below {
     width: 40px;
     height: 40px;
 }
+
 .panel-group.resume .resume-item .resume-btn > a:before {
     display: block;
     position: absolute;
@@ -592,9 +636,11 @@ footer .footer-below {
     font-weight: 700;
     text-align: center;
 }
+
 .panel-group.resume .resume-item .resume-btn > a.collapsed:before {
     content: '+';
 }
+
 .panel-group.resume .resume-item .panel {
     padding: 10px;
     width: 100%;
@@ -602,36 +648,44 @@ footer .footer-below {
     border: 1px solid #6e6e6e;
     border-radius: 0px;
 }
+
 @media (min-width: 568px) {
     .panel-group.resume .resume-item .panel {
         width: calc(100% - 140px);
         margin-left: 140px;
     }
 }
+
 @media (min-width: 768px) {
     .panel-group.resume .resume-item .panel {
         width: calc(100% - 210px);
         margin-left: 210px;
     }
 }
+
 .panel-group.resume .resume-item .panel .panel-heading {
     position: relative;
 }
+
 .panel-group.resume .resume-item .panel .panel-heading .panel-title {
     text-transform: uppercase;
 }
+
 @media (max-width: 567px) {
     .panel-group.resume .resume-item .panel .panel-heading .panel-title {
         padding-top: 20px;
     }
 }
+
 .panel-group.resume .resume-item .panel .panel-collapse .panel-body {
     padding-top: 5px;
     border-top: none;
 }
+
 .panel-group.resume .resume-item .panel .panel-collapse .panel-body p {
     margin-bottom: 0px;
 }
+
 /*---------------------------------------------------------------------*/
 /*  6.7. SECTION - SKILLS
 /*---------------------------------------------------------------------*/
@@ -641,26 +695,31 @@ footer .footer-below {
 #skills .section-wrapper > .section-content {
     padding-bottom: 0px;
 }
+
 @media (min-width: 768px) {
     #skills {
         padding-bottom: 60px;
     }
 }
+
 @media (max-width: 767px) {
     .circle-chart {
         margin-top: -30px;
     }
 }
+
 .circle-chart .item {
     margin-top: 70px;
     margin-bottom: 70px;
 }
+
 @media (min-width: 768px) {
     .circle-chart .item {
         margin-top: 30px;
         margin-bottom: 30px;
     }
 }
+
 .circle-chart .item > .circle {
     position: relative;
     margin: 0 auto;
@@ -673,6 +732,7 @@ footer .footer-below {
     -webkit-transform: rotate(180deg);
     transform: rotate(180deg);
 }
+
 .circle-chart .item > .circle > .item-progress {
     display: inline-block;
     position: relative;
@@ -680,6 +740,7 @@ footer .footer-below {
     height: 20px;
     overflow: hidden;
 }
+
 .circle-chart .item > .circle > .item-progress:before {
     display: block;
     content: "";
@@ -688,6 +749,7 @@ footer .footer-below {
     background-color: #2C3E50;
     border-radius: 106px;
 }
+
 .circle-chart .item > .percent {
     position: absolute;
     top: 50%;
@@ -697,35 +759,43 @@ footer .footer-below {
     line-height: 40px;
     margin-top: -40px;
     margin-left: -20px;
-    background-color: #128f76;
+    background-color: #7D1935;
     font-size: 14px;
     font-weight: 700;
     text-align: center;
     border-radius: 4px;
-    /*  box-shadow: 3px 3px 10px #0d0c0d;*/
+  /*  box-shadow: 3px 3px 10px #0d0c0d;*/
     color: white;
 }
+
 .circle-chart .item > h4 {
     margin-top: 20px;
     letter-spacing: 1px;
 }
-.section-title{
+
+.section-title {
     opacity: 0;
 }
-.slider-container{
-    position: relative; 
+
+.slider-container {
+    position: relative;
     top: 0px;
     bottom: 20px;
-    left: 0px; 
+    left: 0px;
     width: 715px !important;
-    height:515px;
+    height: 515px;
 }
-.slider-container-inner{
+
+.slider-container-inner {
     cursor: move;
-    position: absolute; 
+    position: absolute;
     overflow: hidden;
     left: 0px;
     top: 0px;
     width: 715px !important;
     height: 515px;
+}
+
+.img-border {
+    border: 5px solid #B04F63;
 }
